# agent_peronal

./: .dockerignore  .env.example  .gitignore  HUONG-DAN-SU-DUNG.md  PLAN.md  README.md
.test-ui/: dod_docker_test.py  dod_test.py  ui_test.py
agent-framework/: .env.example  .gitignore  main.py  pyproject.toml
agent-framework/core/: agent_loop.py  context_manager.py  llm_client.py
agent-framework/scripts/: setup_browser_login.py
agent-framework/skills/browser-automation/: SKILL.md
agent-framework/skills/ecommerce-orders/: SKILL.md
agent-framework/skills/ecommerce-orders/scripts/: check_order.py
agent-framework/skills/email-management/: SKILL.md
agent-framework/skills/tiktok-affiliate-creators/: SKILL.md
agent-framework/subagents/: browser-agent.md  dispatcher.py  ecom-agent.md
agent-framework/tools/: registry.py  skill_loader.py  tool_search.py
agent-framework/tools/browser/: browser_tool.py  detector.py  extract_action.py  paint_order.py  registration.py  serializer.py
docker/: Caddyfile  Dockerfile  docker-compose.yml
local-agent/: Dang-nhap-trang-web.bat  app.py  build.spec  config.py  executor.py  login_setup.py  pairing.py
server/: app.py  config.py  device_hub.py  fake_device.py  manage.py  pairing.py  remote_tools.py  runner.py  sessions.py  test_client.py
web/: index.html  package-lock.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/api/: rest.ts  ws.ts
web/src/components/: ChatView.tsx  Composer.tsx  DeviceBadge.tsx  InviteGate.tsx  PairingPanel.tsx  ProgressGroup.tsx  Sidebar.tsx
