[project]
name = "agent-framework"
version = "0.1.0"
description = "Personal agent framework — tool registry, tool search, skills, subagents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "markdownify>=1.2.3",
    "openai>=1.0.0",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
